# activities-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
activity/: Cargo.toml
activity-build/: Cargo.toml  README.md  update.sh
activity-build/src/: install.rs  main.rs
activity-build/src/static/: index.html  sdk.js  shim.js
activity-macros/: Cargo.toml
activity-macros/src/: activity.rs  event.rs  lib.rs
activity-sys/: Cargo.toml
activity-sys/src/: glue.rs  lib.rs  sdk.rs
activity/src/: commands.rs  errors.rs  lib.rs  sdk.rs  types.rs
examples/auth/: Cargo.toml  README.md  index.js  package-lock.json
examples/auth/src/: lib.rs
examples/snake/: Cargo.toml  README.md
examples/snake/src/: game_grid.rs  lib.rs  styles.css
examples/webpack/: .gitignore  Cargo.toml  README.md  index.js  package.json
examples/webpack/src/: lib.rs
