[workspace]
members = [
    "activity", 
    "activity-macros", 
    "activity-sys", 
    "examples/auth"
]
resolver = "2"

[workspace.dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-bindgen-macro-support = "0.2.92"
serde-wasm-bindgen = "0.4"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true

[profile.release.package."*"]
codegen-units = 1
opt-level = "z"
