[package]
name = "activity-macros"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Macros for Discord activities in Rust"
repository = "https://github.com/merlinfuchs/activity-rs"
readme = "../README.md"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen-macro-support.workspace = true
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = "2.0.55"
