[package]
name = "activity-sys"
version = "0.9.0"
edition = "2021"
license = "MIT"
description = "Bindings for Discord activities in Rust"
repository = "https://github.com/merlinfuchs/activity-rs"
readme = "../README.md"

[dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

[dependencies.web-sys]
version = "0.3.69"
features = ['console']
