[package]
name = "activity"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Discord activities in Rust"
repository = "https://github.com/merlinfuchs/activity-rs"
readme = "../README.md"

[dependencies]
activity-macros = { path = "../activity-macros", version = "0.1.3" }
activity-sys = { path = "../activity-sys", version = "0.1.3" }
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
serde.workspace = true
