[package]
name = "auth-in-activities"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
activity = { path="../../activity" }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
serde_json = "1.0.115"

[dependencies.web-sys]
version = "0.3.69"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]
